Week4/Day3/Example_histogram.txt

(base) C:\Users\student-cpt-061>python
Python 3.7.4 (default, Aug  9 2019, 18:34:13) [MSC v.1915 64 bit (AMD64)] :: Anaconda, Inc. on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import numpy as np
>>> a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27])
>>> np.histogram(a,bins = [0,20,40,60,80,100])
(array([3, 4, 5, 2, 1], dtype=int64), array([  0,  20,  40,  60,  80, 100]))
>>> print(a)
[22 87  5 43 56 73 55 54 11 20 51  5 79 31 27]
>>> hist,bins = np.histogram(a,bins = [0,20,40,60,80,100])
>>> print(hist)
[3 4 5 2 1]
>>> print(bins)
[  0  20  40  60  80 100]
>>> print(bins)
[  0  20  40  60  80 100]
>>> from matplotlib import pyplot as plt
>>> import numpy as np
>>> a = np.array([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27])
>>> plt.hist(a,bins = ([22,87,5,43,56,73,55,54,11,20,51,5,79,31,27])
...
... plt.hist(a,bins = ([0,20,40,60,80,100])
  File "<stdin>", line 3
    plt.hist(a,bins = ([0,20,40,60,80,100])
      ^
SyntaxError: invalid syntax
>>> plt.hist(a,bins = [0,20,40,60,80,100])
(array([3., 4., 5., 2., 1.]), array([  0,  20,  40,  60,  80, 100]), <a list of 5 Patch objects>)
>>> plt.title("histogram")
Text(0.5, 1.0, 'histogram')
>>> plt.show()
 